Adding in workspace rules for actual lined up monitors

--- a/hypr/workspacerules.conf
+++ b/hypr/workspacerules.conf
@@ -17,3 +17,6 @@ windowrulev2 = tile,class:^(kitty)$,title:^(kitty)$
 
 #workspace = name:main, monitor:DP-2, default:true
 #workspace = name:code, monitor: HDMI-A-2
+#
+workspace = name:1, monitor:DP-2
+workspace = name:2, monitor: HDMI-A-2
