--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -12,7 +12,7 @@
 #
 bind = $mainMod, Q, exec, $terminal fish
 bind = $mainMod, C, killactive,
-bind = $mainMod, K, exit,
+bind = $mainMod, escape, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, B, exec, $browser
@@ -23,7 +23,7 @@ bind = $mainMod, B, exec, $browser
 ######################
 
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, T, togglesplit, # dwindle
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, U, swapnext
 bind = ALT, TAB, cyclenext
@@ -37,6 +37,16 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+# Vim key bindings
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
+bind = $mainMod SHIFT, l, movewindow, r
+bind = $mainMod SHIFT, h, movewindow, l
+bind = $mainMod SHIFT, k, movewindow, u
+bind = $mainMod SHIFT, j, movewindow, d
 
 
 
