--- a/terminals/ghostty/config
+++ b/terminals/ghostty/config
@@ -42,7 +42,7 @@
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
 
-theme = "Espresso Libre"
+theme = "Ciapre"
 
 confirm-close-surface = false
 
