Adding in justfiles for syncing distro repositorys
This allows for gentoo and other desktops later down the line to be
synced up

--- a/distros/justfile
+++ b/distros/justfile
@@ -1,5 +1,8 @@
 install distro:
-    just ./{{distro}} install
+    just ./{{distro}}/install
+
+sync distro:
+    just ./{{distro}}/sync
 
 clean distro:
-    just ./{{distro}} clean
+    just ./{{distro}}/clean
