--- a/distros/gentoo/justfile
+++ b/distros/gentoo/justfile
@@ -4,6 +4,14 @@ install:
     cp -r ./package.mask /etc/portage/package.mask
     cp -r ./package.use /etc/portage/package.use
     cp -r ./package.accept_keywords /etc/portage/package.accept_keywords
+    emerge --deep $(cat ./requirements.txt | tr '\n' ' ')
+
+sync:
+    cp -r /etc/portage/make.conf ./make.conf 
+    cp -r /etc/portage/package.env ./package.env 
+    cp -r /etc/portage/package.mask ./package.mask 
+    cp -r /etc/portage/package.use ./package.use 
+    cp -r /etc/portage/package.accept_keywords ./package.accept_keywords 
 
 clean:
     rm -f /etc/portage/make.conf
