Add all files for new desktop setup
This adds in new deskto setup for syncing, as desktops have usually
started making them by default

--- a/desktop/justfile
+++ b/desktop/justfile
@@ -1,8 +1,8 @@
 install desktop:
-    @[ -d ./{{desktop}} ] || (echo -e "\033[31;1;merror: \033[0;4mCould not find desktop '\033[1m{{desktop}}\033[0;4m' to install...\033[0m" && exit 2)
-    @ if [ -L ~/.config/{{desktop}} ] ; then echo -e "\033[31;1;merror: \033[0;4mEditor '\033[1m{{desktop}}\033[0;4m' already softlinked to install...\033[0m" && exit 2 ; fi
-    ln -s `pwd`/{{desktop}} ~/.config/{{desktop}}
+    just {{desktop}}/install
+
+sync desktop:
+    just {{desktop}}/sync
 
 clean desktop:
-    -[ -L ~/.config/{{desktop}} ] && rm -f ~/.config/{{desktop}}
-
+    just {{desktop}}/clean
