--- a/desktop/hyprland/justfile
+++ b/desktop/hyprland/justfile
@@ -1,14 +1,14 @@
 install:
-    cp -r ./hypr ~/.config/hypr
-    cp -r ./fuzzel  ~/.config/fuzzel
-    cp -r ./waybar  ~/.config/waybar
+    cp -r ./hypr ~/.config/
+    cp -r ./fuzzel  ~/.config/
+    cp -r ./waybar  ~/.config/
 
 sync:
-    cp -r ~/.config/hypr ./hypr 
-    cp -r ~/.config/fuzzel ./fuzzel 
-    cp -r ~/.config/waybar ./waybar 
+    cp -r ~/.config/hypr .
+    cp -r ~/.config/fuzzel .
+    cp -r ~/.config/waybar .
 
 clean:
-    rm -rf ~/.config/hypr ./hypr 
-    rm -rf ~/.config/fuzzel ./fuzzel 
-    rm -rf ~/.config/waybar ./waybar 
+    rm -rf ~/.config/hypr
+    rm -rf ~/.config/fuzzel
+    rm -rf ~/.config/waybar
