--- a/terminals/ghostty/config
+++ b/terminals/ghostty/config
@@ -47,3 +47,6 @@ theme = "Ciapre"
 confirm-close-surface = false
 
 window-decoration = none
+
+## Disable ctrl-w-shift keybind that closes terminal
+keybind = ctrl+shift+w=ignore
