--- a/desktop/hyprland/hypr/keybindings.conf
+++ b/desktop/hyprland/hypr/keybindings.conf
@@ -11,6 +11,7 @@
 ################################
 #
 unbind = CONTROL,RETURN
+unbind = SHIFT,CONTROL
 
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
