Adding in more hyprland rules, fixing for hyprland vs sway instead for waybar
See summary

--- a/desktop/hyprland/hypr/hyprland.conf
+++ b/desktop/hyprland/hypr/hyprland.conf
@@ -21,6 +21,7 @@ source = ~/.config/hypr/variables.conf # Make sure this is done FIRST
 source = ~/.config/hypr/keybindings.conf
 source = ~/.config/hypr/workspacerules.conf
 source = ~/.config/hypr/exec.conf
+source = ~/.config/hypr/styles.conf
 
 
 ################
