Disabling mouse acceleration
See summary

--- a/desktop/hyprland/hypr/hyprland.conf
+++ b/desktop/hyprland/hypr/hyprland.conf
@@ -133,6 +133,10 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
+    # Disable mouse acceleration
+    accel_profile = flat
+    force_no_accel = true
+
     touchpad {
         natural_scroll = false
     }
