Adds in smaller gaps to match hyprland configuration
See summary

--- a/desktop/hyprland/hypr/hyprland.conf
+++ b/desktop/hyprland/hypr/hyprland.conf
@@ -42,8 +42,9 @@ monitor = HDMI-A-1, 1920x1080, 1920x0, 1
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
+    # Control comparitive to size of screen
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 2
 
@@ -67,11 +68,12 @@ decoration {
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = .9
+    dim_inactive = true
+    dim_strength = .1
 
-    #drop_shadow = true
-    #shadow_range = 4
-    #shadow_render_power = 3
-    #col.shadow = rgba(1a1a1aee)
+    # https://wiki.hyprland.org/Configuring/Variables/#shadow
+    shadow {
+    }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
