--- a/desktop/hyprland/hypr/exec.conf
+++ b/desktop/hyprland/hypr/exec.conf
@@ -10,6 +10,7 @@ exec-once = dbus-update-activation-environment XDG_CURRENT_DESKTOP=$WAYLAND_DISP
 
 exec-once = gentoo-pipewire-launcher
 exec-once = $scriptDir/portalstart.sh
+exec-once = $scriptDir/checkForUpdates.sh
 exec-once = waybar
 exec-once = swww-daemon
 exec-once = swww img ~/.config/hypr/backgrounds/lofi-cozy-house-moewalls-com.gif
