--- a/desktop/hyprland/justfile
+++ b/desktop/hyprland/justfile
@@ -2,13 +2,16 @@ install:
     cp -r ./hypr ~/.config/
     cp -r ./fuzzel  ~/.config/
     cp -r ./waybar  ~/.config/
+    cp -r ./mako ~/.config/
 
 sync:
     cp -r ~/.config/hypr .
     cp -r ~/.config/fuzzel .
     cp -r ~/.config/waybar .
+    cp -r ~/.config/mako .
 
 clean:
     rm -rf ~/.config/hypr
     rm -rf ~/.config/fuzzel
     rm -rf ~/.config/waybar
+    rm -rf ~/.config/mako
