--- a/desktop/hyprland/mako/config
+++ b/desktop/hyprland/mako/config
@@ -1,7 +1,11 @@
+# See https://man.archlinux.org/man/mako.5.en#STYLE_OPTIONS
 default-timeout=3000
 background-color=#ddc7a1
 text-color=#1d2021
 border-radius=5
+# Sets based on directal values, see
+# https://man.archlinux.org/man/mako.5.en#DIRECTIONAL_VALUES
+margin=1,0
 
 [actionable=true]
 on-button-right=exec makoctl menu -n "${id}" fuzzel --dmenu
