--- a/terminals/ghostty/config
+++ b/terminals/ghostty/config
@@ -42,8 +42,9 @@
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
 
+theme = "Afterglow"
 #theme = "Ciapre"
-theme = "NvimLight"
+#theme = "NvimLight"
 
 confirm-close-surface = false
 
