Adds in updates to niri config
See summary

--- a/desktop/niri/justfile
+++ b/desktop/niri/justfile
@@ -1,8 +1,9 @@
 install:
-    cp -r ./niri ~/.config/
+    mkdir -p ~/.config/niri
+    cp -r . ~/.config/niri
 
 sync:
-    cp -r ~/.config/niri .
+    cp -r ~/.config/niri/* .
 
 clean:
     rm -rf ~/.config/niri
