--- a/distros/gentoo/make.conf
+++ b/distros/gentoo/make.conf
@@ -43,7 +43,7 @@ RUBY_TARGETS="ruby33"
 RUBY_SINGLE_TARGET="ruby33"
 
 ## PYTHON, currently this is the standard
-PYTHON_TARGETS="python3_12"
+PYTHON_TARGETS="python3_13 python3_12"
 PYTHON_SINGLE_TARGET="python3_12"
 
 ## LUA
@@ -54,4 +54,4 @@ LUA_SINGLE_TARGET="lua5-4"
 USE_FLAGS="-* minimal wayland pipewire pulseaudio vulkan clang qt6 native-symlinks lto pgo jit xs orc threads asm openmp system-man system-libyaml system-lua system-bootstrap system-llvm system-lz4 system-sqlite system-ffmpeg system-icu system-av1 system-harfbuzz system-jpeg system-libevent system-librnp system-libvpx system-png system-python-libs system-webp system-ssl system-zlib system-boost refind unicode icu"
 
 ## Global features
-FEATURES="candy fixlafiles unmerge-orphans noman nodoc noinfo notitles parallel-install parallel-fetch clean-logs"
+FEATURES="candy fixlafiles unmerge-orphans noman nodoc noinfo notitles parallel-install parallel-fetch clean-logs binpkg-request-signature"
